src/objects/Apttus_Config2__AssetAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class</description>
    <fields>
        <fullName>APTS_AgreementExtID__c</fullName>
        <label>Agreement External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Allow_RentBuy__c</fullName>
        <description>To allow RentBuy contract type. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Allow RentBuy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Allow_consumption_model_based_billi__c</fullName>
        <description>To enable Consumption based billing. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Allow consumption model based billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Allow_sales_price_for_options__c</fullName>
        <description>To allow Sales Price for Options. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Allow sales price for options?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_AssetLineItemExtId__c</fullName>
        <label>Asset Line Item External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price_Override_per_cup_FV__c</fullName>
        <label>Base Price Override per cup (Free Vend)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price_Override_per_cup__c</fullName>
        <label>Base Price Override per cup (Paid)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_responsibility__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Billing Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3nd Party</fullName>
                </value>
                <value>
                    <fullName>JDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Call_Out_Coverage_Percent__c</fullName>
        <label>Call Out Coverage %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Call_Out_Coverage_chk__c</fullName>
        <label>Call Out Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Call_out_Price__c</fullName>
        <label>Call out Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Charge_for_Ingredients__c</fullName>
        <description>Field to check whether Ingredients should be charged. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Charge for Ingredients?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Consumer_Price__c</fullName>
        <label>Consumer_Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consumption_Model_Contract__c</fullName>
        <label>Consumption Model Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Contact_Customer_Before_Delivery__c</fullName>
        <description>Field to check whether Customer should be contacted before delivery. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Contact Customer Before Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cup_Size__c</fullName>
        <label>Cup Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Cup_issued_from_machine__c</fullName>
        <label>Cup issued from machine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Deal_Type__c</fullName>
        <description>Field to display various deal types. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Deal_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_First_Line_Response_Time__c</fullName>
        <label>First Line Response Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Hospitality_card_used__c</fullName>
        <description>Field to check whether hospitality card is used. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Hospitality card used?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Include_Free_Service__c</fullName>
        <label>Include Free Service?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Labour_Coverage_Percent__c</fullName>
        <label>Labour Coverage %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Labour_Coverage_chk__c</fullName>
        <label>Labour Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Labour_coverage_Price__c</fullName>
        <label>Labour coverage Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_List_Price_per_cup_FV__c</fullName>
        <label>List Price per cup (Free Vend)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_List_Price_per_cup__c</fullName>
        <label>List Price per cup (Paid)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Care_Responsibility__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Machine Care Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Merchant__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>JDE &amp; Customer</fullName>
                    <isActive>false</isActive>
                    <label>JDE &amp; Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_hours_per_month__c</fullName>
        <label>Number of hours per month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_months__c</fullName>
        <description>Field to store the number of months. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Warranty - Number of Months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Number_of_weeks__c</fullName>
        <description>Field to store the number of weeks. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Trial Period – Number of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_One_Time_Purchase__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>One-Time-Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Operating_Price__c</fullName>
        <label>Operating Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Frequency__c</fullName>
        <description>Field to display the order frequency value. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Order Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half-yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Preventive_Maintenance_Coverage_Per__c</fullName>
        <label>Preventive Maintenance Coverage %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Method__c</fullName>
        <label>Pricing_Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integral Fixed</fullName>
                </value>
                <value>
                    <fullName>Integral Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Purchase_Value__c</fullName>
        <description>Field to store the purchase value. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Purchase Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Recycling_Fee__c</fullName>
        <description>Field to store the recycling fee value. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Recycling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Refurbished__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Refurbished?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Region__c</fullName>
        <description>Field to display SAP Region values. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Response_Profile__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Response Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Response time 2 hours</fullName>
                </value>
                <value>
                    <fullName>Response time 4 hours</fullName>
                </value>
                <value>
                    <fullName>Response time 6 hours</fullName>
                </value>
                <value>
                    <fullName>Response time 24 hours</fullName>
                </value>
                <value>
                    <fullName>Response time 48 hours</fullName>
                </value>
                <value>
                    <fullName>Response time 72 hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Response_Time_Coverage_Percent__c</fullName>
        <label>Response Time Coverage %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Seasonal_Contract__c</fullName>
        <label>Seasonal Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Service_Window_Coverage_Percent__c</fullName>
        <label>Service Window Coverage %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Window__c</fullName>
        <description>Field to display service window values. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Service Window</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Weekdays (Mon – Fri 8:00 – 17:00)</fullName>
                </value>
                <value>
                    <fullName>Standard Weekdays (Mon – Fri 8:00 – 16:00)</fullName>
                </value>
                <value>
                    <fullName>Standard Weekdays (Mon – Fri 8:00 – 16:45)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Servicer_Provider__c</fullName>
        <description>Field to display service provider values. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>JDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_Parts_Coverage_Percent__c</fullName>
        <label>Spare Parts Coverage %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_Parts_Coverage_chk__c</fullName>
        <label>Spare Parts Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Spare_parts_Price__c</fullName>
        <label>Spare parts Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_SubCategory__c</fullName>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SubSubCategory__c</fullName>
        <label>Sub Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_category__c</fullName>
        <description>Field to store sub-category value. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Sub-category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Taste_Pallet__c</fullName>
        <label>Taste Pallet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type_of_Consumption__c</fullName>
        <label>Type of Consumption Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Free Vend</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type_of_Payment_System__c</fullName>
        <description>Field to display the types of payment system. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Type of Payment System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open system (bankcard)</fullName>
                </value>
                <value>
                    <fullName>Closed system (customer card)</fullName>
                </value>
                <value>
                    <fullName>Hybrid system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type_of_contract__c</fullName>
        <description>Field to display various types of contract. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>RentBuy</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Free On Loan</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Consumption</fullName>
                    <label>Consumption Model</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type_of_payment__c</fullName>
        <label>Type_of_payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Vend</fullName>
                    <default>true</default>
                    <label>Free Vend</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Volume_Assumption__c</fullName>
        <label>Volume Assumption in drinks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WTS_Changed_By__c</fullName>
        <label>WTS Changed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE Engineer</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Waterfilter_Coverage_Percent__c</fullName>
        <label>Waterfilter Coverage %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Weight__c</fullName>
        <description>Field to store the weight value. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <description>ID of the associated asset line item</description>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Asset Attribute Values</relationshipLabel>
        <relationshipName>AssetAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset Attribute Value</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>